Adding github link

--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@ var languages = document.getElementById('languages');
 
         <section>
             <h1>MERCI</h1>
+            <h3>/github.com/padewitte/DEVFEST_PARIS_2016</h3>
             <h3>@padewitte</h3>
             <h3>dev.myscript.com</h3>
         </section>
