--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <!-- Integration  myscript-math-web -->
+    <script src="bower_components/pepjs/dist/pep.min.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/myscript-math-web/myscript-math-web.html">
     <link rel="import" href="bower_components/myscript-text-web/myscript-text-web.html">
@@ -110,11 +111,11 @@
             <h3>Reconnaissance de texte</h3>
         </section>
 
-        <section data-background-image="img/hieroglyphs.svg" data-background-size="70%" data-background-color="#D6E4FF">
+        <section data-background-image="img/hieroglyphs.svg" data-background-size="70%" data-background-color="#CADAF9">
         </section>
         <section  data-background-image="img/code_c.png" data-background-size="100%">
         </section>
-        <section data-background-image="img/write61.svg" data-background-size="40%" data-background-color="#D6E4FF">
+        <section data-background-image="img/write61.svg" data-background-size="40%" data-background-color="#CADAF9">
         </section>
         <section>
             <pre>
@@ -136,7 +137,7 @@
             },{...}]}]}
                 </code></pre>
         </section>
-        <section data-background-image="img/pens3.svg" data-background-size="30%" data-background-color="#D6E4FF">
+        <section data-background-image="img/pens3.svg" data-background-size="30%" data-background-color="#CADAF9">
         </section>
         <section>
             <pre>
@@ -156,7 +157,7 @@ var languages = document.getElementById('languages');
                 </code>
             </pre>
         </section>
-        <section data-background-image="img/pen-7.svg" data-background-size="30%" data-background-color="#D6E4FF">
+        <section data-background-image="img/pen-7.svg" data-background-size="30%" data-background-color="#CADAF9">
         </section>
         <section data-background-color="#FFE5B4">
             <section>
@@ -233,14 +234,14 @@ var languages = document.getElementById('languages');
 
         <section>
             <h1>MERCI</h1>
-            <h3>/github.com/padewitte/DEVFEST_PARIS_2016</h3>
+            <h3>github.com/padewitte/DEVFEST_PARIS_2016</h3>
             <h3>@padewitte</h3>
             <h3>dev.myscript.com</h3>
         </section>
 
 
 <section>
-    <h3>Crédits photos</h3>
+    <h3>Crédits</h3>
         <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
 </section>
         <!-- This section is a slide. -->
