--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
 
-    <title>reveal.js – The HTML Presentation Framework</title>
+    <title>P.A. DEWITTE - DEVFEST PARIS 2016</title>
 
-    <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-    <meta name="author" content="Hakim El Hattab">
+    <meta name="description" content="Reconnaissance d'ériture avec un composant Polymer">
+    <meta name="author" content="P.A. DEWITTE">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -111,11 +111,14 @@
             <h3>Reconnaissance de texte</h3>
         </section>
 
-        <section data-background-image="img/hieroglyphs.svg" data-background-size="70%" data-background-color="#CADAF9">
+        <section data-background-image="img/hieroglyphs.svg" data-background-size="70%">
         </section>
         <section  data-background-image="img/code_c.png" data-background-size="100%">
         </section>
-        <section data-background-image="img/write61.svg" data-background-size="40%" data-background-color="#CADAF9">
+        <section  data-background-image="img/mstech.svg" data-background-size="90%">
+        </section>
+
+        <section data-background-image="img/write61.svg" data-background-size="40%">
         </section>
         <section>
             <pre>
@@ -137,7 +140,7 @@
             },{...}]}]}
                 </code></pre>
         </section>
-        <section data-background-image="img/pens3.svg" data-background-size="30%" data-background-color="#CADAF9">
+        <section data-background-image="img/pens3.svg" data-background-size="30%">
         </section>
         <section>
             <pre>
@@ -157,7 +160,7 @@ var languages = document.getElementById('languages');
                 </code>
             </pre>
         </section>
-        <section data-background-image="img/pen-7.svg" data-background-size="30%" data-background-color="#CADAF9">
+        <section data-background-image="img/draw11.svg" data-background-size="30%">
         </section>
         <section data-background-color="#FFE5B4">
             <section>
