Modification page github

--- a/index.html
+++ b/index.html
@@ -262,7 +262,11 @@ solvingZoneElement.addEventListener("myscript-math-web-result",
 );
             </code></pre>
         </section>
-        <section data-background-image="img/GitHub_Logo.png" data-background-size="50%">
+        <section>
+            <img src="img/GitHub-Mark-120px-plus.png" height="120px"><img src="img/GitHub_Logo.png"  height="120px">
+            <br>
+            <h5><a href='https://github.com/MyScript/myscript-math-web'>https://github.com/MyScript/myscript-math-web</a></h5>
+            <h5><a href='https://github.com/MyScript/myscript-text-web'>https://github.com/MyScript/myscript-text-web</a></h5>
         </section>
 
         <section data-background-image="img/ms-usecases.png" data-background-size="50%">
@@ -270,7 +274,7 @@ solvingZoneElement.addEventListener("myscript-math-web-result",
 
         <section>
             <h1>MERCI</h1>
-            <h3>github.com/padewitte/DEVFEST_PARIS_2016</h3>
+            <br>
             <h3>@padewitte</h3>
             <h3>dev.myscript.com</h3>
         </section>
