--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ solvingZoneElement.addEventListener("myscript-math-web-result",
 <section>
     <h3>Crédits</h3>
         <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+        <div>Css inspiration from Lea Verou <a href="http://lea.verou.me/css3patterns/#blueprint-grid">http://lea.verou.me/css3patterns/#blueprint-grid</a></div>
 </section>
         <!-- This section is a slide. -->
 
