--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 language="fr_FR"
                 applicationkey="22eda92c-10af-40d8-abea-fd4093c17d81"
                 hmackey="a1fa759f-b3ce-4091-9fd4-d34bb870c601"
-                host="webdemo.myscript.com">
+                host="webdemoapi.myscript.com">
             </myscript-text-web>
         </section>
         <!--section>
@@ -242,7 +242,7 @@ var languages = document.getElementById('languages');
             <myscript-math-web id="solving-zone"
                 applicationkey="22eda92c-10af-40d8-abea-fd4093c17d81"
                 hmackey="a1fa759f-b3ce-4091-9fd4-d34bb870c601"
-                host="webdemo.myscript.com"
+                host="webdemoapi.myscript.com"
                 hideresult
                 class="stretch">
             </myscript-math-web>
@@ -344,7 +344,7 @@ solvingZoneElement.addEventListener("myscript-math-web-result",
                     cssValue: '<myscript-math-web  \n' +
                     '\tapplicationkey="22eda92c-10af-40d8-abea-fd4093c17d81" \n' +
                     '\thmackey="a1fa759f-b3ce-4091-9fd4-d34bb870c601"  \n' +
-                    '\thost="webdemo.myscript.com"  \n' +
+                    '\thost="webdemoapi.myscript.com"  \n' +
                     '\tclass="stretch">  \n' +
                     '</myscript-math-web>'
                 }));
@@ -354,7 +354,7 @@ solvingZoneElement.addEventListener("myscript-math-web-result",
                     '\tapplicationkey="22eda92c-10af-40d8-abea-fd4093c17d81" \n' +
                     '\thmackey="a1fa759f-b3ce-4091-9fd4-d34bb870c601"  \n' +
                     '\tlanguage="fr_FR"  \n' +
-                    '\thost="webdemo.myscript.com"' +
+                    '\thost="webdemoapi.myscript.com"' +
                     '\tclass="stretch">  \n' +
                     '</myscript-text-web>'
                 }));
